[package]
name = "gib2sgf"
version = "0.1.2"
authors = ["Juha Komulainen <juha.komulainen@evident.fi>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/komu/gib2sgf"
description = "Gib to SGF translator"

[lib]
name = "gib2sgf"
path = "src/lib.rs"

[[bin]]
name = "gib2sgf"
path = "src/main.rs"

[dependencies]
linked-hash-map = "0.5"
filetime = "0.2"
